--- a/PiaGOApp/app/src/main/res/layout/activity_main.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/borderinput"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -24,6 +25,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titlescreen_email"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/borderinput"
         android:hint="Password"
         />
 
