--- a/PiaGOApp/app/src/main/res/layout/activity_piago_main_screen.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_piago_main_screen.xml
@@ -5,5 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PiagoMainScreen">
+    <ImageView
+        android:id="@+id/mainscreen_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/piago_logo_white"/>
+
+    <Button
+        android:id="@+id/mainscreen_button_jam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Jam"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainscreen_logo"
+        android:onClick="launchJam"/>
+
+    <Button
+        android:id="@+id/mainscreen_button_learn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Learn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainscreen_button_jam"
+        android:onClick="launchLearn"/>
+
+    <Button
+        android:id="@+id/mainscreen_button_customize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Customize"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainscreen_button_learn"
+        android:onClick="launchCustomize"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
