--- a/PiaGOApp/app/src/main/res/layout/activity_main.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
         android:text="Play offline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="playOffline"/>
 
     <ImageView
         android:layout_width="wrap_content"
