--- a/PiaGOApp/app/src/main/res/layout/activity_bluetooth.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_bluetooth.xml
@@ -1,44 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BluetoothActivity">
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    tools:context=".MainActivity">
 
+    <!--Display whether bluetooth is available or not-->
+    <TextView
+        android:id="@+id/statusBluetoothTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="#000"/>
+    <!--Bluetooth icon (on/off)-->
+    <ImageView
+        android:id="@+id/bluetoothIv"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+    <!--On Button-->
     <Button
-        android:id="@+id/button_bton"
+        android:id="@+id/onBtn"
+        android:minWidth="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BT ON"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="103dp" />
-
+        android:text="Turn On"
+        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+    <!--Off btn-->
     <Button
-        android:id="@+id/button_btoff"
+        android:id="@+id/offBtn"
+        android:minWidth="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BT OFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="209dp" />
-
+        android:text="Turn Off"
+        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+    <!--Discoverable button-->
     <Button
-        android:id="@+id/button_getdevices"
+        android:id="@+id/discoverableBtn"
+        android:minWidth="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get paired dev"
-        tools:layout_editor_absoluteX="130dp"
-        tools:layout_editor_absoluteY="306dp" />
-
+        android:text="Discoverable"
+        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+    <!--Get list of paired devices button-->
     <Button
-        android:id="@+id/button_discoverable"
+        android:id="@+id/pairedBtn"
+        android:minWidth="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set discoverable"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="394dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="Get Paired Devices"
+        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+    <!--Show paired devices here-->
+    <TextView
+        android:id="@+id/pairedTv"
+        android:minWidth="200dp"
+        android:text=""
+        android:textColor="#000"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
