--- a/PiaGOApp/app/src/main/res/layout/activity_main.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:onClick="playOffline"/>
+        android:onClick="playOffline"
+        android:background="@drawable/button_piago_main"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -57,7 +58,8 @@
         android:text="Login"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlescreen_password" />
+        app:layout_constraintTop_toBottomOf="@+id/titlescreen_password"
+        android:background="@drawable/button_piago_main"/>
     <TextView
         android:id="@+id/titlescreen_signup"
         android:layout_width="wrap_content"
