Revert "Merge branch 'master' into MIDIBranch"
This reverts commit 28d4f28c893a86eb1dff9d887374a71bc878eb1f.

--- a/PiaGOApp/app/src/main/res/layout/activity_main.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/borderinput"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -25,7 +24,6 @@
         app:layout_constraintTop_toBottomOf="@+id/titlescreen_email"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/borderinput"
         android:hint="Password"
         />
 
@@ -37,29 +35,19 @@
         android:text="Play offline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:onClick="playOffline"
-        android:background="@drawable/button_piago_main"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <ImageView
+    <TextView
+        android:id="@+id/titlescreen_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="67dp"
+        android:layout_marginTop="80dp"
+        android:text="PiaGO"
+        android:textSize="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/piago_logo_black"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/titlescreen_loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:onClick="loginActivity"
-        android:text="Login"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlescreen_password"
-        android:background="@drawable/button_piago_main"/>
     <TextView
         android:id="@+id/titlescreen_signup"
         android:layout_width="wrap_content"
@@ -68,9 +56,8 @@
         android:text="Not a member yet? Signup!"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlescreen_loginButton"
-        android:alpha="0.5"
-        android:onClick="signupActivity"/>
+        app:layout_constraintTop_toBottomOf="@+id/titlescreen_password"
+        android:alpha="0.5"/>
 
     <TextView
         android:id="@+id/titlescreen_forgetpassword"
@@ -81,7 +68,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titlescreen_signup"
-        android:alpha="0.5"
-        android:onClick="passwordRecovery"/>
+        android:alpha="0.5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
