--- a/PiaGOApp/app/src/main/res/layout/activity_test_midi_driver.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_test_midi_driver.xml
@@ -9,5 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Play a note"
-        android:id="@+id/buttonPlayNote" />
+        android:id="@+id/buttonPlayNote"
+        android:onClick="playIsIets"/>
 </LinearLayout>
