--- a/PiaGOApp/app/src/main/res/layout/activity_play_piago.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_play_piago.xml
@@ -69,13 +69,15 @@
         android:onClick="octaveHigher"
         android:background="@drawable/button_piago_main"/>
 
-    <Switch
+    <ToggleButton
         android:id="@+id/switch_piago"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@+id/button_instrument"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Learn" />
+        android:textOff="Jam"
+        android:textOn="Learn"
+        android:background="@drawable/button_piago_main"/>
 
     <LinearLayout
         android:layout_width="match_parent"
