--- a/PiaGOApp/app/src/main/res/layout/activity_play_piago.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_play_piago.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Touch for sound"
+        android:textStyle="bold"
         android:id="@+id/button_playSound"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Play sound"
+        android:textStyle="bold"
         android:id="@+id/button_instrument"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Preview Song"
+        android:textStyle="bold"
         android:id="@+id/button_preview"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -37,6 +40,7 @@
         android:layout_height="wrap_content"
         android:text="Start Song"
         android:id="@+id/button_start_song"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@id/button_preview"
         android:onClick="startSong"
@@ -47,6 +51,7 @@
         android:text="Piano"
         android:id="@+id/button_change_instrument"
         app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/switch_piago"
         android:onClick="changeInstrument"
         android:background="@drawable/button_piago_main"/>
@@ -56,6 +61,7 @@
         android:layout_marginTop="50dp"
         android:text="AUTOCNCT"
         android:id="@+id/button_autocnct"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/switch_piago"
         android:onClick="changeInstrument"
@@ -73,6 +79,7 @@
         android:layout_height="wrap_content"
         android:text="Lower"
         android:id="@+id/button_octave_lower"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@id/button_octave_higher"
         android:onClick="octaveLower"
@@ -82,6 +89,7 @@
         android:layout_height="wrap_content"
         android:text="Higher"
         android:id="@+id/button_octave_higher"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:onClick="octaveHigher"
@@ -93,6 +101,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@+id/button_instrument"
         app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
         android:textOff="Jam"
         android:textOn="Learn"
         android:background="@drawable/button_piago_main"/>
