--- a/PiaGOApp/app/src/main/res/layout/activity_piago_main_screen.xml
+++ b/PiaGOApp/app/src/main/res/layout/activity_piago_main_screen.xml
@@ -19,36 +19,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Jam"
+        android:padding="10dp"
+        android:text="Start Playing"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainscreen_logo"
         android:onClick="launchJam"
         android:background="@drawable/button_piago_main"/>
 
-    <Button
-        android:id="@+id/mainscreen_button_learn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Learn"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainscreen_button_jam"
-        android:onClick="launchLearn"
-        android:background="@drawable/button_piago_main"/>
 
-    <Button
-        android:id="@+id/mainscreen_button_customize"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Customize"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainscreen_button_learn"
-        android:onClick="launchCustomize"
-        android:background="@drawable/button_piago_main"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
